<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Overview"
            android:icon="@mipmap/pentagon"
            android:title="Overview" />
        <item
            android:id="@+id/History"
            android:icon="@mipmap/reorder"
            android:title="History" />
        <item
            android:id="@+id/Itemcategory"
            android:icon="@mipmap/add"
            android:title="Add Categories" />
        <item
            android:id="@+id/ItemSettings"
            android:icon="@mipmap/dis"
            android:title="Settings" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/aboutUs"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about_us" />
            <item
                android:id="@+id/contactUs"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
