<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/transfer_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/transfer_txtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/transfer_spinner"
        android:layout_marginTop="11dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:text="Amount" />

    <TextView
        android:id="@+id/transfer_txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/transfer_txtAmount"
        android:layout_marginTop="13dp"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/transfer_txtNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/transfer_txtDate"
        android:layout_marginTop="11dp"
        android:text="@string/note"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/transfer_btnCancel"
        android:layout_width="wrap_content"
        android:layout_below="@+id/transfer_txtNote"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/edittextstyle"
        android:textAlignment="center"
        android:text="@string/cancel"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/transfer_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/edittextstyle"
        android:layout_below="@+id/transfer_txtNote"
        android:layout_marginTop="22dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>